--- a/journal_entries/journal_entry_3/main.css
+++ b/journal_entries/journal_entry_3/main.css
@@ -31,18 +31,16 @@ img {
 .h1{
     text-align: center;
     font-family:Redaction20Bold;
-    font-size: 50px;
+    font-size: 20;
     color: rgb(57, 57, 36)
 }
 
 .p1{
-    text-align: center;
     font-family:Redaction20;
     color: rgb(57, 57, 36)
 }
 
 .p2{
-  text-align: center;
   font-family:Redaction20Italic;
   color: rgb(57, 57, 36)
 }
@@ -56,58 +54,26 @@ img {
 }
 
 .top{
-  height: 85%;
+  height: 95%;
   border: solid 1px rgb(57, 57, 36);
   display: flex;
   flex-direction: column;
-}
-
-.top1{
-  height: 12.5%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.top2{
-  height: 75%;
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.top3{
-  height: 12.5%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.bottom{
-  height: 10%;
-  display: flex;
-  flex-direction: row;
+  align-items: flex-start;
   gap: 10px;
+  padding: 10px;
 }
 
-.left{
-  width: 50%;
+.drawer{
+  height: 40px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  padding: 10px;
   border: solid 1px rgb(57, 57, 36);
 }
 
-.right{
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: solid 1px rgb(57, 57, 36);
+div.drawer:hover{
+  background-color:rgb(207,207,206);
 }
 
 .credits{
