--- a/journal_entries/main.css
+++ b/journal_entries/main.css
@@ -56,58 +56,25 @@ img {
 }
 
 .top{
-  height: 85%;
+  height: 95%;
   border: solid 1px rgb(57, 57, 36);
   display: flex;
   flex-direction: column;
-}
-
-.top1{
-  height: 12.5%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.top2{
-  height: 75%;
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.top3{
-  height: 12.5%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.bottom{
-  height: 10%;
-  display: flex;
-  flex-direction: row;
   gap: 10px;
+  padding: 10px;
 }
 
-.left{
-  width: 50%;
+.drawer{
+  height: 40px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
+  padding: 10px;
   border: solid 1px rgb(57, 57, 36);
 }
 
-.right{
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: solid 1px rgb(57, 57, 36);
+div.drawer:hover{
+  background-color:rgb(207,207,206);
 }
 
 .credits{
