--- a/passion_the_third/main.css
+++ b/passion_the_third/main.css
@@ -18,6 +18,7 @@ body{
   background-repeat: no-repeat;
   background-attachment: fixed;  
   background-size: cover;
+  background-position: center;
   background-color:rgb(246, 250, 236); 
   max-width: 600px;
   margin: auto;
