--- a/journal_entries/journal_entry_1/main.css
+++ b/journal_entries/journal_entry_1/main.css
@@ -5,7 +5,7 @@
 body{
     max-width: 500px;
     margin: auto;
-    background-image: url(../../webminogue_background.png);
+    background-image: url(callme054.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: cover;
@@ -37,17 +37,17 @@ img {
     text-align: center;
     font-family:Redaction20Bold;
     font-size: 20;
-    color: rgb(57, 57, 36)
+    color: rgb(220, 230, 225)
 }
 
 .p1{
     font-family:Redaction20;
-    color: rgb(57, 57, 36)
+    color: rgb(220, 230, 225)
 }
 
 .p2{
   font-family:Redaction20Italic;
-  color: rgb(57, 57, 36)
+  color: rgb(220, 230, 225)
 }
 
 .main{
@@ -60,7 +60,7 @@ img {
 
 .top{
   height: 95%;
-  border: solid 1px rgb(57, 57, 36);
+  border: solid 2px rgb(220, 230, 225);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -74,7 +74,7 @@ img {
   justify-content: flex-start;
   align-items: center;
   padding: 10px;
-  border: solid 1px rgb(57, 57, 36);
+  border: solid 2px rgb(220, 230, 225);
 }
 
 div.drawer:hover{
@@ -86,7 +86,7 @@ div.drawer:hover{
   display: flex;
   justify-content: center;
   align-items: center;
-  border: solid 1px rgb(57, 57, 36);
+  border: solid 2px rgb(220, 230, 225);
 }
 
 
@@ -97,20 +97,20 @@ div.drawer:hover{
 
  /* unvisited link */
  a:link {
-  color: rgb(57, 57, 36);
+  color: rgb(220, 230, 225);
 }
 
 /* visited link */
 a:visited {
-  color: rgb(57, 57, 36);
+  color: rgb(220, 230, 225);
 }
 
 /* mouse over link */
 a:hover {
-  color: rgb(57, 57, 36);
+  color: rgb(220, 230, 225);
 }
 
 /* selected link */
 a:active {
-  color: rgb(57, 57, 36);
+  color: rgb(220, 230, 225);
 } 
