--- a/journal_entries/journal_entry_3/main.css
+++ b/journal_entries/journal_entry_3/main.css
@@ -10,7 +10,7 @@ body{
     background-attachment: fixed;  
     background-size: cover;
     background-position: center;
-    background-color: rgb(237, 237, 236)
+    background-color: rgb(0,0,0)
 }
 
 @font-face {
